# 3-python-package-exercise-bestswe

./: README.md  pyproject.toml
.github/workflows/: build.yaml
just4fun/: fun.py
just4fun/4fun/: magic_8_ball.py
src/: fun.py
src/4fun/: Pipfile  affirmations.py  magic_8_ball.py
src/just4fun/: __main__.py  fun.py
tests/: test_cases.py  test_functions.py
